added sections and footer to body

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Header content</h1>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running Locations, Distance, Times
+    </section>
+    <footer>
+        social media links
+    </footer>
 </body>
 </html>
