--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,26 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Love Running</title>
 </head>
+
 <body>
-    <h1>Header content</h1>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Main Image
     </section>
@@ -25,4 +44,5 @@
         social media links
     </footer>
 </body>
+
 </html>
