add img and styled it

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </nav>
     </header>
     <section>
-        Main Image
+        <div id="hero-image">
+            <img src="" alt="">
+        </div>
     </section>
     <section>
         Club Ethos
