--- a/index.html
+++ b/index.html
@@ -118,7 +118,20 @@
         </div>
     </section>
     <footer>
-        social media links
+        <ul>
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="http://youtube.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <!--fontawesome icons link. At this point its faster!-->
