--- a/index.html
+++ b/index.html
@@ -118,18 +118,18 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="socail-networks">
             <li>
-                <a href="http://facebook.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="http://twitter.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
-                <a href="http://youtube.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+                <a href="http://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
             </li>
             <li>
-                <a href="http://instagram.com" target="_blank" rel="noopener noreferrer" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
