--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,18 @@
             </ul>
         </nav>
     </header>
+
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athletes running together">
+        <img src="assets/images/girls.jpg" alt="Three girls running together">
+        <img src="assets/images/runner3.jpg" alt="A man runs on the beach">
+        <img src="assets/images/man.jpg" alt="A man runs alone">      
+        <img src="assets/images/runner1.jpg" alt="A woman runs through Phoenix Park">
+        <img src="assets/images/runner2.jpg" alt="Runners competing in a marathon">
+        <img src="assets/images/runner4.jpg" alt="A woman runs on the beach">
+        <img src="assets/images/running_gang.jpg" alt="A running group running throu the rain">
+        <img src="assets/images/mud-run.jpg" alt="Two women runners taken a mudy selfie">
+    </section>
  
     <footer>
         <ul class="socail-networks">
